refactor: Update code for Java SE 21 compliance
- Add @Override annotations where necessary.
- Use Boolean.parseBoolean instead of Boolean.valueOf().booleanValue().
- Replace StringBuilder with StringBuffer in thread-sensitive contexts.
- Use modern SLF4J pattern with static final field.
- Use lambda expression for Comparator implementation.
- Update to use modern instance creation pattern.